Test/errors/err_stack_noncopyable_elem.cb
// stack<T> insert is MOVE-BY-DEFAULT: the by-value push() parameter is a synthesized move sink,
// so `s.push(h)` TAKES ownership of an owning element (here a non-copyable SHolder that owns a
// `unique` pointer) - the caller's source is consumed and nulled, no `move` keyword and no copy()
// required. Reusing the moved-from local afterward is therefore a use-of-moved error.
// The sound transfer + teardown is exercised in test_collection_leaks.cb.
import "stack.cb";
class SRes { int id = default; };
class SHolder { unique SRes* r = default; int k = default; };
expect_error("use of moved variable 'h'");
extern int main()
{
    stack<SHolder> s;
    SHolder h = default;
    s.push(h);
    int k = h.k;
    return 0;
}
